--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      background: url('file:///C:/Users/Usu%C3%A1rio/Downloads/Mais%201%20satisfeito%20com%20o%20que%20viu%F0%9F%A4%AD.png') no-repeat center center;
+      background: url('https://github.com/vinnyhack/aneffonseca/commit/38dab2f82e51f5f55872dabd3e1323c1fbed8243#r165466322') no-repeat center center;
       background-size: cover;
       position: relative;
     }
@@ -72,3 +72,4 @@
   </div>
 </body>
 </html>
+
