--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      background: url('https://github.com/vinnyhack/aneffonseca/commit/38dab2f82e51f5f55872dabd3e1323c1fbed8243#r165466322') no-repeat center center;
+      background: url(https://github.com/vinnyhack/aneffonseca/blob/91f0fe1d97db7078dd2a54679edd7e003ff9c424/fundo.png.png) no-repeat center center;
       background-size: cover;
       position: relative;
     }
@@ -72,4 +72,5 @@
   </div>
 </body>
 </html>
+
 
