--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      background: url('fundo.png.png') no-repeat center center;
+      background: url(fundo.png.PNG) no-repeat center center;
       background-size: cover;
       position: relative;
     }
@@ -72,6 +72,7 @@
   </div>
 </body>
 </html>
+
 
 
 
