--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      background: url(fundo.png.PNG) no-repeat center center;
-      background-size: cover;
+      background: linear-gradient(270deg, #ff007f, #7f00ff, #00c6ff);
+      background-size: 600% 600%;
+      animation: gradientAnimation 12s ease infinite;
       position: relative;
+    }
+
+    @keyframes gradientAnimation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     body::before {
@@ -26,7 +33,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.55);
+      background: rgba(0, 0, 0, 0.35); /* leve escurecimento pra destacar o texto */
       z-index: 0;
     }
 
@@ -72,9 +79,3 @@
   </div>
 </body>
 </html>
-
-
-
-
-
-
