--- a/index.html
+++ b/index.html
@@ -14,16 +14,8 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      background: linear-gradient(270deg, #ff007f, #7f00ff, #00c6ff);
-      background-size: 600% 600%;
-      animation: gradientAnimation 12s ease infinite;
+      background: linear-gradient(135deg, #2b1055, #7597de);
       position: relative;
-    }
-
-    @keyframes gradientAnimation {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
     }
 
     body::before {
@@ -33,7 +25,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.35); /* leve escurecimento pra destacar o texto */
+      background: rgba(0, 0, 0, 0.55);
       z-index: 0;
     }
 
@@ -47,35 +39,4 @@
 
     h1 {
       font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 30px;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 15px 40px;
-      background: linear-gradient(90deg, #ff007f, #ff00ff);
-      color: white;
-      font-size: 18px;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 12px;
-      box-shadow: 0px 4px 12px rgba(0,0,0,0.4);
-      transition: transform 0.2s ease, background 0.3s ease;
-    }
-
-    .btn:hover {
-      transform: scale(1.05);
-      background: linear-gradient(90deg, #ff00ff, #ff007f);
-    }
-  </style>
-</head>
-<body>
-  <div class="content">
-    <h1>LADO SECRETO, TUDO NO MEU IG 😊👇🏻</h1>
-    <a class="btn" href="https://www.instagram.com/aneffonseca" target="_blank" rel="noopener noreferrer">
-      CLICA AQUI❤
-    </a>
-  </div>
-</body>
-</html>
+      fon
