--- a/index.html
+++ b/index.html
@@ -39,4 +39,43 @@
 
     h1 {
       font-size: 20px;
-      fon
+      font-weight: bold;
+      margin-bottom: 30px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 15px 40px;
+      background: linear-gradient(90deg, #ff007f, #ff00ff);
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 12px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.4);
+      transition: background 0.3s ease;
+      
+      /* pulsando devagar */
+      animation: pulse 2.5s infinite;
+    }
+
+    .btn:hover {
+      background: linear-gradient(90deg, #ff00ff, #ff007f);
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.07); }
+      100% { transform: scale(1); }
+    }
+  </style>
+</head>
+<body>
+  <div class="content">
+    <h1>ACESSE MEU LADO SECRETO, TUDO NO MEU IG 😊👇🏻</h1>
+    <a class="btn" href="https://www.instagram.com/aneffonseca" target="_blank" rel="noopener noreferrer">
+      CLICA AQUI❤
+    </a>
+  </div>
+</body>
+</html>
